TEST PROJECT CHEKIN

--- a/MyWeppAppTest/MyWeppAppTest.csproj
+++ b/MyWeppAppTest/MyWeppAppTest.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyWeppAPp\MyWeppAPp.csproj">
+      <Project>{a269f263-a331-4888-9521-d6a4764028d4}</Project>
+      <Name>MyWeppAPp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
